--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,10 +4,16 @@ Version: 0.0.0.9000
 Authors@R: person('Jixing', 'Liu', email = 'jixing475@163.com', role = c('cre', 'aut'))
 Description: PKG_DESC.
 License: MIT + file LICENSE
-Imports: 
+Imports:
     config (>= 0.3.1),
     golem (>= 0.3.1.9000),
-    shiny (>= 1.6.0.9001)
+    shiny (>= 1.6.0.9001),
+    bookdown,
+    here
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
+Suggests: devtools,
+    git2r
+URL: https://github.com/jixing475/shiy4tools
+BugReports: https://github.com/jixing475/shiy4tools/issues
